remove z-index on moon header client so tooltips layer correctly
Issue: ENYO-783
Enyo-DCO-1.1-Signed-off-by: Ryan Duffy (ryan.duffy@lge.com)

--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -1590,8 +1590,6 @@ html {
   /* fallback in case text-align:end isn't supported */
   text-align: end;
   /* CSS3 for RTL support */
-  z-index: 1;
-  /* Fixme: Inverse component stack order */
 }
 .moon-header.moon-medium-header .moon-header-client,
 .moon-header.moon-small-header .moon-header-client {
